--- a/doctorpassword.css
+++ b/doctorpassword.css
@@ -129,7 +129,7 @@ body{
   margin-top: 30px;
 }
 .forms .signup-form .input-box, .forms .signup-form .selection {
-  display: inline-block;
+  /* display: inline-block; */
   align-items: center;
   height: 50px;
   width: 100%;
