--- a/login1.css
+++ b/login1.css
@@ -11,7 +11,9 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background:blue;
+  /* background-image: url("images/background1.jpg"); */
+
+  /* background:#0a7e8c; */
   padding: 30px;
 }
 .container{
@@ -55,8 +57,8 @@ body{
   position: absolute;
   height: 100%;
   width: 100%;
-  background:#7d2ae8;
-  opacity: 0.5;
+  background:#900C3F;
+  opacity: 0.2;
   z-index: 12;
 }
 .container .cover::after{
@@ -119,7 +121,7 @@ body{
   bottom: 0;
   height: 3px;
   width: 25px;
-  background: #7d2ae8;
+  background: #581845;
 }
 .forms .signup-form  .title:before{
   width: 20px;
@@ -148,11 +150,11 @@ body{
 }
 .form-content .input-box input:focus,
 .form-content .input-box input:valid{
-  border-color: #7d2ae8;
+  border-color: #581845;
 }
 .form-content .input-box i{
   position: absolute;
-  color: #7d2ae8;
+  color: #581845;
   font-size: 17px;
 }
 /* .forms .form-content .text{
@@ -172,17 +174,17 @@ body{
 }
 .forms .form-content .button input{
   color: #fff;
-  background: #7d2ae8;
+  background: #0a7e8c;
   border-radius: 6px;
   padding: 0;
   cursor: pointer;
   transition: all 0.4s ease;
 }
 .forms .form-content .button input:hover{
-  background: #5b13b9;
+  background: #581845;
 }
 .forms .form-content label{
-  color: #5b13b9;
+  color: #581845;
   cursor: pointer;
 }
 .forms .form-content label:hover{
