--- a/doctorpassword1.css
+++ b/doctorpassword1.css
@@ -55,7 +55,7 @@ body{
   position: absolute;
   height: 100%;
   width: 100%;
-  background: #7d2ae8;
+  background: #2B4560;
   opacity: 0.5;
   z-index: 12;
 }
@@ -119,8 +119,8 @@ body{
   left: 0;
   bottom: 0;
   height: 3px;
-  width: 100px;
-  background: #7d2ae8;
+  width: 200px;
+  background: #2B4560;
 }
 /* .forms .signup-form  .title:before{
   width: 40px;
@@ -129,7 +129,7 @@ body{
   margin-top: 30px;
 }
 .forms .signup-form .input-box, .forms .signup-form .selection {
-  display: inline-block;
+  /* display: inline-block; */
   align-items: center;
   height: 50px;
   width: 100%;
@@ -149,11 +149,11 @@ body{
 }
 .signup-form .input-box input:focus,
 .signup-form .input-box input:valid{
-  border-color: #7d2ae8;
+  border-color: #2B4560;
 }
 .signup-form .input-box i{
   position: absolute;
-  color: #7d2ae8;
+  color: #2B4560;
   font-size: 17px;
 }
 
@@ -178,17 +178,17 @@ body{
 }
 .forms .signup-form .button input{
   color: #fff;
-  background: #7d2ae8;
+  background: #2B4560;
   border-radius: 6px;
   padding: 0;
   cursor: pointer;
   transition: all 0.4s ease;
 }
 .forms .signup-form .button input:hover{
-  background: #5b13b9;
+  background: #2B4560  ;
 }
 .forms .signup-form label{
-  color: #5b13b9;
+  color: #2B4560  ;
   
 }
 
