--- a/patient_dashboard2.css
+++ b/patient_dashboard2.css
@@ -184,6 +184,74 @@ body{
   cursor: pointer;
   transition: all 0.4s ease;
 }
+
+/* .button input{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  margin-left: 800px;
+  width: 10%;
+  height: 5%;
+  display: block;
+
+
+
+
+} */
+
+#input-box{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  /* margin-left: 200px; */
+  float:right;
+  transform: translateX(500px);
+
+
+  width:150%;
+  height: 5%;
+  /* display: block; */
+
+}
+
+#input-box1{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:100%;
+  margin-top: 200px;
+  margin-right: 200px;
+  height: 10%;
+  transform: translateX(100px);
+  /* display: block; */
+}
+
+#input-box2{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:170%;
+  /* margin-top: 200px; */
+  /* margin-right: 200px; */
+  height: 10%;
+  
+  /* transform: translateY(500px);
+  transform: translateX(-200px); */
+  transform: translate(-275px,300px);
+  /* display: block; */
+}
 .forms .form-content .button input:hover{
   background: #2B4560;
 }
@@ -224,4 +292,10 @@ body{
 
 a{
     margin-left: 500px;
+}
+.record-box{
+  background-color: blanchedalmond;
+  width: 150%;
+  border-radius: 10px;
+  padding: 5px;
 }
