--- a/view_record.css
+++ b/view_record.css
@@ -9,19 +9,21 @@
 body {
   min-height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   background: url("images/background2.jpg");
   padding: 30px;
+  transform: translateX(-140px);
 }
 .container {
   position: relative;
   /* max-width: 850px; */
   width: 100%;
-  background: #fff;
+  /* background: #fff; */
   padding: 40px 30px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  perspective: 2700px;
+  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); */
+  /* perspective: 2700px; */
+ justify-content: left;
 }
 .container .cover {
   position: absolute;
@@ -94,7 +96,7 @@ body {
 .container .forms {
   height: 100%;
   width: 100%;
-  background: #fff;
+  /* background: #fff; */
 }
 .container .form-content {
   display: flex;
@@ -213,3 +215,52 @@ body {
     display: none;
   }
 }
+
+table {
+   
+    border:1px solid black;
+    text-align: center;
+
+   
+  }
+th,td{
+    border:1px solid black;
+    text-align: center;
+   
+  white-space: nowrap;
+  overflow: hidden;
+  padding: 10px;
+}
+  
+  .date{
+      width: 200%;
+  }
+  #input-box2{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    padding: 0;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    width:10%;
+    /* margin-top: 200px; */
+    /* margin-right: 200px; */
+ 
+    
+  
+  }
+
+  #input-box3{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    padding: 0;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    width:400%;
+    height:6%;
+    transform: translate(900px,245px);
+    
+    
+  
+  }
