--- a/view_record1.css
+++ b/view_record1.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   /* align-items: center; */
   /* justify-content: center; */
-  background: url("images/background2.jpg");
+  /* background: url("images/background2.jpg"); */
   padding: 30px;
 }
 .container {
@@ -232,4 +232,18 @@ th,td{
   
   .date{
       width: 200%;
+  }
+  #input-box2{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    padding: 0;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    width:170%;
+    /* margin-top: 200px; */
+    /* margin-right: 200px; */
+    height: 10%;
+    
+  
   }
