--- a/doctordashboard1.css
+++ b/doctordashboard1.css
@@ -9,14 +9,14 @@
 body{
   min-height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   background: url("images/background2.jpg"); 
   padding: 30px;
 }
 .container{
   position: relative;
-  max-width: 850px;
+  max-width: 150%;
   width: 100%;
   background: #fff;
   padding: 40px 30px;
@@ -24,14 +24,15 @@ body{
   perspective: 2700px;
 }
 .container .cover{
-  position: absolute;
+  position: relative;
   top: 0;
   left: 50%;
   height: 100%;
-  width: 50%;
+  width: 25%;
+  /* float: right; */
   z-index: 98;
   transition: all 1s ease;
-  transform-origin: left;
+  transform-origin: right;
   transform-style: preserve-3d;
 }
 .container #flip:checked ~ .cover{
@@ -39,11 +40,12 @@ body{
 }
  .container .cover .front,
  .container .cover .back{
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   height: 100%;
-  width: 100%;
+  width: 50%;
+  float: right;
 }
 .cover .back{
   transform: rotateY(180deg);
@@ -212,4 +214,16 @@ body{
   .container #flip:checked ~ .forms .login-form{
     display: none;
   }
+}
+
+.docdetails{
+    position: absolute;
+    /* text-align: right; */
+    justify-content: flex-end;
+    /* float: right; */
+}
+
+.patientbutton{
+    background-color: bisque;
+    border-radius: 6%;
 }
