--- a/patient_dashboard2.css
+++ b/patient_dashboard2.css
@@ -11,7 +11,7 @@ body{
   display: flex;
   /* align-items: center; */
   /* justify-content: left; */
-  background: url("images/background2.jpg"); 
+  /* background: url("images/background2.jpg");  */
   padding: 30px;
 }
 .container{
@@ -232,6 +232,7 @@ body{
   margin-right: 200px;
   height: 10%;
   transform: translateX(100px);
+  position:relative;
   /* display: block; */
 }
 
@@ -246,6 +247,7 @@ body{
   /* margin-top: 200px; */
   /* margin-right: 200px; */
   height: 10%;
+  position:relative;
   
   /* transform: translateY(500px);
   transform: translateX(-200px); */
