--- a/patientdashboard1.css
+++ b/patientdashboard1.css
@@ -11,7 +11,7 @@ body{
   display: flex;
   /* align-items: center; */
   /* justify-content: left; */
-  background: url("images/background2.jpg"); 
+  /* background: url("images/background2.jpg");  */
   padding: 30px;
 }
 .container{
@@ -294,5 +294,8 @@ a{
     margin-left: 500px;
 }
 .record-box{
-  background-color: grey;
+  background-color: blanchedalmond;
+  width: 150%;
+  border-radius: 10px;
+  padding: 5px;
 }
