--- a/patientsymptomsfordoctor3.css
+++ b/patientsymptomsfordoctor3.css
@@ -9,21 +9,12 @@
 body {
   min-height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   background: url("images/background2.jpg");
   padding: 30px;
-  transform: translateX(-140px);
+  /* transform: translateX(-140px); */
 }
-
-.wrapper{
-    position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-}
-
 .container {
   position: relative;
   /* max-width: 850px; */
@@ -248,10 +239,11 @@ th,td{
     color: #fff;
     background: #2B4560;
     border-radius: 6px;
-    padding: 0;
+    padding: 1%;
     cursor: pointer;
     transition: all 0.4s ease;
-    width:10%;
+    width:20%;
+    height:20%;
     /* margin-top: 200px; */
     /* margin-right: 200px; */
  
