--- a/view_record2.css
+++ b/view_record2.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   /* align-items: center; */
   /* justify-content: center; */
-  /* background: url("images/background2.jpg"); */
+  background: url("images/background2.jpg");
   padding: 30px;
   /* transform: translateX(-140px); */
 }
@@ -289,7 +289,7 @@ th,td{
     transition: all 0.4s ease;
     width:30%;
     height:6%;
-    transform: translate(1500px,255px);
+    transform: translate(1px,255px);
     
     
   
