close record done

--- a/doctordashboard.css
+++ b/doctordashboard.css
@@ -9,13 +9,13 @@
 body{
   min-height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: left; */
   background: url("images/background2.jpg"); 
   padding: 30px;
 }
 .container{
-  /* position: relative; */
+  position: relative;
   max-width: 850px;
   width: 100%;
   background: #fff;
@@ -117,7 +117,7 @@ body{
   left: 0;
   bottom: 0;
   height: 3px;
-  width: 225px;
+  width: 230px;
   background: #2B4560;
 }
 .forms .signup-form  .title:before{
@@ -125,6 +125,13 @@ body{
 }
 .forms .form-content .input-boxes{
   margin-top: 30px;
+  /* margin-left: 100px; */
+}
+
+.input-boxes{
+    margin-left: 200px;
+
+
 }
 .forms .form-content .input-box{
   display: flex;
@@ -177,6 +184,74 @@ body{
   cursor: pointer;
   transition: all 0.4s ease;
 }
+
+/* .button input{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  margin-left: 800px;
+  width: 10%;
+  height: 5%;
+  display: block;
+
+
+
+
+} */
+
+#input-box{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  /* margin-left: 200px; */
+  float:right;
+  transform: translateX(500px);
+
+
+  width:150%;
+  height: 5%;
+  /* display: block; */
+
+}
+
+#input-box1{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:100%;
+  margin-top: 200px;
+  margin-right: 200px;
+  height: 10%;
+  transform: translateX(100px);
+  /* display: block; */
+}
+
+#input-box2{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:170%;
+  /* margin-top: 200px; */
+  /* margin-right: 200px; */
+  height: 10%;
+  
+  /* transform: translateY(500px);
+  transform: translateX(-200px); */
+  transform: translate(-275px,300px);
+  /* display: block; */
+}
 .forms .form-content .button input:hover{
   background: #2B4560;
 }
@@ -214,14 +289,71 @@ body{
   }
 }
 
-.docdetails{
-  position: absolute;
-  /* text-align: right; */
-  justify-content: flex-end;
-  /* float: right; */
+
+a{
+    margin-left: 500px;
+}
+.record-box{
+  background-color: blanchedalmond;
+  width: 150%;
+  border-radius: 10px;
+  padding: 5px;
 }
 
-.patientbutton{
-  background-color: bisque;
-  border-radius: 6%;
+.logout-box{
+  /* background-color: blanchedalmond; */
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  width: 15%;
+  height: 15%;
+  border-radius: 10px;
+  text-align: center;
+  padding: 1%;
+  float: right;
+
 }
+
+.prev-box{
+  /* background-color: blanchedalmond; */
+  /* color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  width: 15%;
+  height: 15%;
+  border-radius: 10px;
+  text-align: center;
+  padding: 1%;
+  transform: translate(-275px,300px); */
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 1%;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:100%;
+  margin-top: 150px;
+  margin-right: 200px;
+  height: 50%;
+  text-align: center;
+  transform: translate(-490px,250px);
+}
+
+/* 
+#input-box2{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:170%;
+  /* margin-top: 200px; */
+  /* margin-right: 200px; */
+  /* height: 10%; */
+  
+  /* transform: translateY(500px);
+  transform: translateX(-200px); */
+  /* transform: translate(-275px,300px); */
+  /* display: block; */
+/* } */
