--- a/patientdashboard.css
+++ b/patientdashboard.css
@@ -294,5 +294,35 @@ a{
     margin-left: 500px;
 }
 .record-box{
-  background-color: grey;
+  background-color: blanchedalmond;
+  width: 150%;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.logout-box{
+  /* background-color: blanchedalmond; */
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  width: 15%;
+  height: 15%;
+  border-radius: 10px;
+  text-align: center;
+  padding: 1%;
+  float: right;
+
+}
+
+.prev-box{
+  /* background-color: blanchedalmond; */
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  width: 15%;
+  height: 15%;
+  border-radius: 10px;
+  text-align: center;
+  padding: 1%;
+
 }
