--- a/patientpastfordoctor1.css
+++ b/patientpastfordoctor1.css
@@ -10,13 +10,13 @@ body{
   min-height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: left;
-  /* background: url("images/background2.jpg");  */
+  justify-content: center;
+  background: url("images/background2.jpg"); 
   padding: 30px;
 }
 .container{
   position: relative;
-  max-width: 850px;
+  max-width: 700px;
   width: 100%;
   background: #fff;
   padding: 40px 30px;
@@ -75,8 +75,8 @@ body{
   z-index: 130;
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   align-items: center;
   justify-content: center;
 }
@@ -97,7 +97,7 @@ body{
   background: #fff;
 }
 .container .form-content{
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: space-between;
 }
@@ -134,7 +134,7 @@ body{
 
 }
 .forms .form-content .input-box{
-  display: flex;
+  /* display: flex; */
   align-items: center;
   height: 50px;
   width: 100%;
@@ -295,7 +295,18 @@ a{
 }
 .record-box{
   background-color: blanchedalmond;
-  width: 150%;
+  width: 210%;
   border-radius: 10px;
   padding: 5px;
+}
+
+.back-box{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    width: 15%;
+    border-radius: 10px;
+    text-align: center;
+    padding: 1%;
+    cursor:pointer;
 }
