Hopefuly final version

--- a/doctordashboard2_edited.css
+++ b/doctordashboard2_edited.css
@@ -9,11 +9,10 @@
 body{
   min-height: 100vh;
   /* display: flex; */
-  align-items: center;
+  /* align-items: center; */
   /* justify-content: left; */
   background: url("images/background2.jpg"); 
   padding: 50px;
-  position:relative;
 }
 .container{
   position: relative;
@@ -118,7 +117,7 @@ body{
   left: 0;
   bottom: 0;
   height: 3px;
-  width: 100px;
+  width: 180px;
   background: #2B4560;
 }
 .forms .signup-form  .title:before{
@@ -207,18 +206,27 @@ body{
   color: #fff;
   background: #2B4560;
   border-radius: 6px;
-  padding: 0;
+  padding: 1%;
   cursor: pointer;
   transition: all 0.4s ease;
   /* margin-left: 200px; */
-  float:right;
-  transform: translateX(500px);
+  /* float:right; */
+  /* transform: translateX(500px); */
 
 
-  width:150%;
-  height: 5%;
+  /* width:150%; */
+  /* height: 5%; */
   /* display: block; */
 
+}
+
+.buttons{
+    /* float:right; */
+  /* display: block; */
+  display: flex;                  /* establish flex container */
+  flex-direction: row;            /* default value; can be omitted */
+  flex-wrap: nowrap;              /* default value; can be omitted */
+  justify-content: space-between;
 }
 
 #input-box1{
@@ -228,7 +236,18 @@ body{
   padding: 1%;
   cursor: pointer;
   float: left;
-  margin: 5px;
+  /* color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:100%;
+  margin-top: 200px;
+  margin-right: 200px;
+  height: 10%; */
+  /* transform: translateX(100px); */
+  /* display: block; */
 }
 
 #input-box2{
@@ -238,8 +257,31 @@ body{
   padding: 1%;
   cursor: pointer;
   float: center;
-  margin: 5px;
 }
+
+#input-box3{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 1%;
+  cursor: pointer;
+  float: right;
+}
+
+/* #input-box2{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:170%; */
+  /* margin-top: 200px; */
+  /* margin-right: 200px; */
+  /* transform: translateY(500px);
+  transform: translateX(-200px); */
+  /* display: block; */
+/* } */
 
 .forms .form-content .button input:hover{
   background: #2B4560;
@@ -300,12 +342,11 @@ a{
   position:absolute;
     top:10px;
     right: 10px;
-
 }
 
 .prev-box{
   /* background-color: blanchedalmond; */
-  color: #fff;
+  /* color: #fff;
   background: #2B4560;
   border-radius: 6px;
   width: 15%;
@@ -313,5 +354,36 @@ a{
   border-radius: 10px;
   text-align: center;
   padding: 1%;
-
+  transform: translate(-275px,300px); */
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 1%;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:100%;
+  margin-top: 150px;
+  margin-right: 200px;
+  height: 50%;
+  text-align: center;
+  transform: translate(-490px,250px);
 }
+
+/* 
+#input-box2{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:170%;
+  /* margin-top: 200px; */
+  /* margin-right: 200px; */
+  /* height: 10%; */
+  
+  /* transform: translateY(500px);
+  transform: translateX(-200px); */
+  /* transform: translate(-275px,300px); */
+  /* display: block; */
+/* } */
