--- a/patientsymptomsfordoctor2.css
+++ b/patientsymptomsfordoctor2.css
@@ -119,7 +119,7 @@ body {
   left: 0;
   bottom: 0;
   height: 3px;
-  width: 225px;
+  width: 180px;
   background: #2b4560;
 }
 .forms .signup-form .title:before {
@@ -239,58 +239,38 @@ th,td{
     color: #fff;
     background: #2B4560;
     border-radius: 6px;
-    padding: 0;
+    padding: 1%;
     cursor: pointer;
     transition: all 0.4s ease;
-    width:10%;
-    /* margin-top: 200px; */
-    /* margin-right: 200px; */
- 
-    
-  
+    width:32%;
+    height:20%;
   }
 
   #input-box3{
     color: #fff;
     background: #2B4560;
     border-radius: 6px;
-    padding: 12px;
+    padding: 0;
     cursor: pointer;
     transition: all 0.4s ease;
-    width:30%;
+    width:400%;
     height:6%;
-    transform: translate(900px,300px);
+    transform: translate(900px,245px);
     
     
   
   }
 
-  #input-box4{
-    color: #fff;
-    background: #2B4560;
-    border-radius: 6px;
-    padding: 12px;
-    cursor: pointer;
-    transition: all 0.4s ease;
-    width:30%;
-    height:6%;
-    transform: translate(1500px,255px);
-    
-    
-  
-  }
 
-  #input-box5{
+  .record-box{
+    /* background-color: blanchedalmond; */
     color: #fff;
     background: #2B4560;
     border-radius: 6px;
-    padding: 12px;
-    cursor: pointer;
-    transition: all 0.4s ease;
-    width:30%;
-    height:6%;
-    transform: translate(1px,255px);
-    
-    
-  
+    width: 15%;
+    border-radius: 10px;
+    text-align: center;
+    padding: 1%;
+    float: left;
+    cursor:pointer;
   }
