--- a/submitreport1.css
+++ b/submitreport1.css
@@ -119,7 +119,7 @@ body{
   left: 0;
   bottom: 0;
   height: 3px;
-  width: 80px;
+  width: 110px;
   background: #2B4560;
 }
 /* .forms .signup-form  .title:before{
@@ -251,8 +251,28 @@ body{
     width:70%;
     /* margin-top: 200px; */
     /* margin-right: 200px; */
- 
-    
-  
   }
 
+  #input-box4{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    font-size: 16px;
+  }
+
+  
+  .record-box{
+    /* background-color: blanchedalmond; */
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    width: 15%;
+    border-radius: 10px;
+    text-align: center;
+    padding: 1%;
+    float: left;
+    cursor:pointer;
+  }
