--- a/view_record3.css
+++ b/view_record3.css
@@ -9,9 +9,9 @@
 body {
   min-height: 100vh;
   display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* background: url("images/background2.jpg"); */
+  /* align-items: center;
+  justify-content: center; */
+  background: url("images/background2.jpg");
   padding: 30px;
   /* transform: translateX(-140px); */
 }
@@ -235,19 +235,25 @@ th,td{
   .date{
       width: 200%;
   }
+  #input-box1{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    padding: 1%;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    /* width:32%; */
+  }
+
   #input-box2{
     color: #fff;
     background: #2B4560;
     border-radius: 6px;
-    padding: 0;
+    padding: 1%;
     cursor: pointer;
     transition: all 0.4s ease;
-    width:10%;
-    /* margin-top: 200px; */
-    /* margin-right: 200px; */
- 
-    
-  
+    width:32.5%;
+    height:20%;
   }
 
   #input-box3{
@@ -257,9 +263,9 @@ th,td{
     padding: 12px;
     cursor: pointer;
     transition: all 0.4s ease;
-    width:30%;
+    width:40%;
     height:6%;
-    transform: translate(900px,300px);
+    /* transform: translate(900px,300px); */
     
     
   
@@ -274,7 +280,7 @@ th,td{
     transition: all 0.4s ease;
     width:30%;
     height:6%;
-    transform: translate(1500px,255px);
+    /* transform: translate(1500px,255px); */
     
     
   
@@ -289,7 +295,7 @@ th,td{
     transition: all 0.4s ease;
     width:30%;
     height:6%;
-    transform: translate(1500px,255px);
+    /* transform: translate(1px,255px); */
     
     
   
